[project]
name = "psvg"
version = "0.2.8"
description = "Python Classes for programatically constructing SVGs"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.61.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["PSVG"]

include = [
  "PSVG/Text/fonts/**/*.ttf"
]
