[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psvg"
version = "0.2.9"
description = "Python Classes for programatically constructing SVGs"
requires-python = ">=3.10"
dependencies = [
    "fonttools>=4.61.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/PSVG"]